[gd_scene load_steps=10 format=2]

[ext_resource path="res://imagens/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Biker.gd" type="Script" id=2]
[ext_resource path="res://imagens/mao-godot-v4 (1).png" type="Texture" id=3]
[ext_resource path="res://Scenes/Spas.gd" type="Script" id=4]
[ext_resource path="res://imagens/bullet.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Sprite.gd" type="Script" id=6]
[ext_resource path="res://Sounds/shotgunSFX.v2.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 31 )

[node name="Biker" type="KinematicBody2D"]
position = Vector2( 144, 136 )
script = ExtResource( 2 )

[node name="hitboxP" type="Area2D" parent="." groups=["barreira"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxP"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="tempoRecarga" type="Timer" parent="."]
wait_time = 1.7

[node name="tempoEntre" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]

[node name="Spas" type="Sprite" parent="."]
position = Vector2( -1, 1 )
scale = Vector2( 0.117857, 0.117857 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( 100, -300 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Spas"]
visible = false
position = Vector2( 1319.71, -0.000244141 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -10, -10 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="area_entered" from="hitboxP" to="." method="_on_hitboxP_area_entered"]
[connection signal="timeout" from="tempoRecarga" to="Spas" method="_on_tempoRecarga_timeout"]
[connection signal="timeout" from="tempoRecarga" to="Spas/Sprite" method="_on_tempoRecarga_timeout"]
[connection signal="timeout" from="tempoEntre" to="Spas" method="_on_tempoEntre_timeout"]
[connection signal="timeout" from="tempoEntre" to="Spas/Sprite" method="_on_tempoEntre_timeout"]
